ui upgradation, supabase disconnected. running backend with local DB